[package]
name = "rustguard-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives for RustGuard: X25519, ChaCha20-Poly1305, BLAKE2s, HKDF"

[features]
default = ["std"]
std = ["getrandom", "rand_core/getrandom"]

[dependencies]
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "zeroize"] }
subtle = { version = "2", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
blake2 = { version = "0.10", default-features = false }
rand_core = { version = "0.6" }
zeroize = { version = "1", default-features = false, features = ["derive"] }
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
hex = "0.4"
