[package]
name = "rustguard-enroll"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RustGuard zero-config enrollment: dynamic key exchange and IP assignment"

[dependencies]
rustguard-core = { path = "../rustguard-core" }
rustguard-crypto = { path = "../rustguard-crypto" }
rustguard-daemon = { path = "../rustguard-daemon" }
rustguard-tun = { path = "../rustguard-tun" }
base64 = "0.22"
getrandom = "0.2"
libc = "0.2"
